--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .navbar {
-    background-color: #131313;
+    background-color: #eec2c2;
     height: 80px;
     display: flex;
     justify-content: center;
@@ -29,7 +29,7 @@
 }
 
 #navbar-logo {
-    background: #ff8177;
+    background: #000000;
     background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
     background-size: 100%;
     -moz-background-clip: text;
@@ -364,14 +364,14 @@
     height: 525px;
     width: 400px;
     border-radius: 4px;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(17, 17, 17, 0.6) 100%), url(./images/pexels-harsch-shivam-2007647.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(17, 17, 17, 0.6) 100%), url(./images/dog2.jpg);
     background-size: cover;
     position: relative;
     color: #fff;
 }
 
 .services-card:nth-child(2) {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(17, 17, 17, 0.6) 100%), url(./images/pexels-tima-miroshnichenko-6499172.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(17, 17, 17, 0.6) 100%), url(./images/dog1.jpg);
 }
 
 .services h2 {
